Make the CTS test cases runnalbe on Android R to B.
1. Skip Aware + accept any peer test cases when SDK version < 31.
2. Skip local-only SoftAP test case when SDK version < 33.
3. Skip NEARBY_WIFI_DEVICES permission check when SDK version < 33.
4. Use `get(0)` instead of `getList()` in onConnectedClientsChanged(),
   as the latter causes an error on Android R.
5. Set min_sdk_version in AndroidManifest.xml from 31 to 30

Bug: 424144799
Test: http://sponge2/84901ec1-4b81-4dbf-b3a9-b94b3fd207fb (CTS-V-Host Aware tests + Android B)
Test: http://sponge2/e0d60dc9-42b8-4e1c-ac1f-9f9a1dcdbc12 (CTS-V-Host Aware tests + Android R)
Test: http://sponge2/4fb97419-043a-4365-9340-d5ce83de2ec8 (Direct tests + Android B)
Test: http://sponge2/ca8503c6-5f17-409b-a463-8459c96ac95d (Direct tests + Android R)
Test: http://sponge2/d2e469cc-d6e6-40cc-bff2-e342e3ea1d49 (CTS-V-Host SoftAp tests + Android V)
Test: http://sponge2/015b83c0-4fd0-4d17-bc56-e89c03b4f808 (CTS-V-Host SoftAp tests + Android R)
Flag: TEST_ONLY
Change-Id: I6119fbf4a4e33b7ac403394892ca96816b9b3526